# assrs

./: .pre-commit-config.yaml  Cargo.toml  assrs.pyi  pyproject.toml
src/: automaton.rs  bktree.rs  levenshtein.rs  lib.rs  trie.rs
